# idac-rpc

./: .gitignore  CMakeLists.txt  README.md  compile.bat  config.ini  idac-rpc.bat  requirements.txt
src/cpp/: main.cpp
src/python/: enums.py  main.py
